welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:10: error: not found: value array
	var T=array(a,b,c,d);
              ^countTeen:13: error: not found: value t
		if (teen(t(y))==true) {
                         ^